# binance-python-connector

./: .gitignore  LICENSE  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
binance_book/: __init__.py  client.py  config.py  error_reporting.py  exceptions.py  markets.py  telemetry.py
binance_book/analytics/: __init__.py  imbalance.py  microstructure.py  spread.py  sweep.py  vwap.py
binance_book/api/: __init__.py  auth.py  endpoints.py  rest.py  websocket.py
binance_book/book/: __init__.py  depth_cache.py  multi_book.py  snapshot.py
binance_book/filters/: __init__.py  anomaly.py  dust.py  gap.py  stale.py
binance_book/health/: __init__.py  latency_monitor.py  stats.py  sync_monitor.py
binance_book/schemas/: __init__.py  base.py  ohlcv.py  orderbook.py  quote.py  static.py  ticker.py  trade.py
binance_book/streams/: __init__.py  depth_stream.py  kline_stream.py  manager.py  ticker_stream.py  trade_stream.py
binance_book/throttle/: __init__.py  backpressure.py  rate_limiter.py
binance_book/tools/: __init__.py  anthropic.py  mcp.py  openai.py  registry.py
docs/: api-reference.md  data-quality.md  examples.md  getting-started.md  index.md
tests/: conftest.py  test_analytics.py  test_client.py  test_depth_cache.py  test_error_reporting.py  test_filters.py  test_schemas.py  test_telemetry.py  test_tools.py
